[package]
name = "detestable-me"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "detestable-me"
path = "src/main.rs"
test = false

[lib]
name = "evil"
path = "src/lib.rs"

[dependencies]
anyhow = "1.0.66"
async-trait = "0.1.59"
tokio = { version = "1.23.0", features = ["macros", "time", "rt"] }

[dev-dependencies]
test-context = "0.1.4"
